# num-calc

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  controller.cpp  controller.h  main.cpp
